# copypy

./: README.md  main.py  pyproject.toml  requeriments.txt  requirements.txt
src/copypy/: __main__.py  copypy.py
src/copypy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/transpy/: transpy.py
src/transpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
