[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transpy"
version = "0.0.1"
authors = [{ name = "Juan Rojas", email = "jfernandorojasc@gmail.com" }]
description = "Video Transcription"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DevArKaDiA/transpy"
"Bug Tracker" = "https://github.com/DevArKaDiA/transpy"
