[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "copypy"
version = "0.0.9"
authors = [{ name = "Juan Rojas", email = "jfernandorojasc@gmail.com" }]
description = "Video Transcription"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "SpeechRecognition==3.10.0",
    "pydub==0.25.1",
    "numpy==1.26.2",
    "soundfile==0.12.1",
    "torch==2.1.1",
    "openai-whisper==20231106",
]

[project.urls]
"Homepage" = "https://github.com/DevArKaDiA/transpy"
"Bug Tracker" = "https://github.com/DevArKaDiA/transpy"
